# poly-btc-5m-analyse

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
docs/: README.md  architecture.md  backlog.md  backtester.md  data-sources.md  database.md  deployment.md  runbook.md
docs/agent/: README.md  conventions.md  data-quality.md  migrations.md  pitfalls.md  testing.md
scripts/: monitor_chainlink.py  smoke.py  wss_dump.py
src/poly_btc/: binance_client.py  chainlink_snapshot.py  clob_client.py  compactor.py  config.py  db.py  gamma.py  log.py  main.py  resolver.py  rtds_client.py  schema.sql
src/poly_btc/backtest/: __init__.py  app.py  cli.py  core.py  sql.py
src/poly_btc/backtest/pages/: 1_Inspect_market.py  2_DB_status.py
