[project]
name = "poly-btc-5m-analyse"
version = "0.1.0"
description = "Collector + backtester for Polymarket BTC 5-minute Up/Down markets"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "websockets>=13",
    "psycopg[binary,pool]>=3.2",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "python-dotenv>=1.0",
    "orjson>=3.10",
    "structlog>=24.4",
]

[project.optional-dependencies]
backtest = [
    "pandas>=2.2",
    "numpy>=1.26",
    "streamlit>=1.38",
    "altair>=5.4",
]

[project.scripts]
poly-btc-collector = "poly_btc.main:run"
poly-btc-app = "poly_btc.backtest.cli:run_streamlit"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
poly_btc = ["schema.sql"]
